force-app/main/default/objects/Message_Template__c/Message_Template__c.object-meta.xml
<CustomObject>
    <label>Message Template</label>
    <nameField>
        <displayFormat>MT-{0000}</displayFormat>
        <label>Message Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Message Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>