force-app/main/default/objects/Message_Template__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>The Body content of the Template message</description>
    <inlineHelpText>The Body content of the Template message</inlineHelpText>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>