force-app/main/default/objects/Message_Template__c/fields/Button__c.field-meta.xml
<CustomField>
    <fullName>Button__c</fullName>
    <label>Button</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>