force-app/main/default/objects/Message_Template__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Stores the communicating channel (Eg: SMS)</description>
    <inlineHelpText>Stores the communicating channel (Eg: SMS)</inlineHelpText>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
                <default>true</default>
                <label>SMS</label>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Twilio WhatsApp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>