force-app/main/default/objects/Message_Template__c/fields/Error_Response__c.field-meta.xml
<CustomField>
    <fullName>Error_Response__c</fullName>
    <label>Error Response</label>
    <type>TextArea</type>
</CustomField>