force-app/main/default/objects/Message_Template__c/fields/List_Picker_With_Description__c.field-meta.xml
<CustomField>
    <fullName>List_Picker_With_Description__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this Twilio list-picker template uses separate variables for item title and description (2,3, 4,5, ...). When false, uses flat variables (2, 3, ...) for item text only.</description>
    <label>List Picker With Description</label>
    <type>Checkbox</type>
</CustomField>