force-app/main/default/objects/Message_Template__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Stores the Name of the Object for sending Dynamic field values(Eg: Account - Name, Id, Phone etc.,)</description>
    <inlineHelpText>Stores the Name of the Object for sending Dynamic field values(Eg: Account - Name, Id, Phone etc.,)</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>