force-app/main/default/objects/Message_Template__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <description>Stores the Name of the Template</description>
    <inlineHelpText>Stores the Name of the Template</inlineHelpText>
    <label>Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>