force-app/main/default/objects/Message_Template__c/fields/WhatsApp_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Template_ID__c</fullName>
    <label>WhatsApp Template ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>