force-app/main/default/objects/Message_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Template_Name__c</columns>
    <columns>Channel__c</columns>
    <columns>Body__c</columns>
    <columns>Error_Response__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Button__c</columns>
    <filterScope>Everything</filterScope>
    <label>Template</label>
</ListView>