force-app/main/default/objects/Message_Template__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Channel__c</columns>
    <columns>Header__c</columns>
    <columns>Status__c</columns>
    <columns>Error_Response__c</columns>
    <columns>Body__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>